# CCNY_Schedule_Pro_Backend

./: Cargo.toml  City College of New York.json  all_search_result.json  diesel.toml  test.rest
migrations/2025-02-08-000843_create_posts/: down.sql
migrations/2025-02-10-224659_create_users/: up.sql
src/: chat_client.rs  chat_server.rs  lib.rs  main.rs  models.rs  schema.rs  test.py  utils.rs
src/routes/: actix_routes.rs  auth_routes.rs  course_routes.rs  mod.rs  rmp_routes.rs
src/routes/chat/: codec.rs  mod.rs  session.rs  websocket.rs
