[package]
name = "CCNY_Schedule_Pro_Backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main-server"
default = true
path = "src/main.rs"

[[bin]]
name = "chat-server"
path = "src/chat_server.rs"

[[bin]]
name = "chat-client"
path = "src/chat_client.rs"

[dependencies]
actix = "*"
actix-codec = "0.5.2"
actix-files = "0.6.6"
actix-web = "4"
actix-web-actors = "4.3.1"
actix-ws = "0.3.0"
awc = "3.5.1"
byteorder = "1.5.0"
env_logger = "0.11.6"
futures-util = { version = "0.3.31", features = ["sink"] }
log = "0.4.22"
rand = "0.8.5"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["rt", "time", "macros"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-actix-web = "0.7.15"

# database dependancies
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"

# add custom libraries
ccny-course-catalog = "0.1.1"
rate_my_professor_api_rs = "0.1.5"
